# amli360.com

./: .editorconfig  .gitignore  README.md
.github/workflows/: build_deploy.yaml
backend/: .dockerignore  dockerbuild.sh  dockerfile  imggenerate.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend-rs/: Cargo.toml
backend-rs/src/: main.rs
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
backend/src/config/: config.keys.ts  config.service.ts
backend/src/decorators/: role.decorator.ts
backend/src/entities/: role.entity.ts
backend/src/guards/role/: role.guard.ts
backend/src/modules/role/: role.repository.ts
backend/src/modules/role/controllers/: role.controller.ts
backend/src/modules/role/services/: role.service.ts
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/e2e/src/: app.e2e-spec.ts
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/modules/about-me/: about-me.component.html  about-me.component.spec.ts  about-me.component.ts  about-me.module.ts
frontend/src/app/modules/chat/: chat.component.css  chat.component.html  chat.component.ts  chat.module.ts
frontend/src/app/modules/games/: games.module.ts
frontend/src/app/modules/shared/: shared.module.ts
frontend/src/environments/: environment.prod.ts  environment.ts  environment.type.ts
scripts/: build_front_prod.sh  deploy_front.sh  dockerbuild.sh
(+9 files in other folders)
