[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
rayon = "1.5.1"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "1.0.75"
awc = "2.0.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
overflow-checks = false
opt-level = 3
